[project]
name = "broadcast-server"
version = "1.0.0"
description = "CLI WebSocket broadcast server with auth & history"
requires-python = ">=3.9"
dependencies = [
    "websockets>=12.0",
    "click>=8.0",
]

[project.scripts]
broadcast-server = "broadcast_server.cli:cli"

[build-backend]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
sources = ["."]
